--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -6,7 +6,7 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/dismissable_view"
-        android:layout_margin="50dp"
+        android:layout_margin="25dp"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_gravity="center"
@@ -19,7 +19,6 @@
         <!--<ScrollView-->
             <!--android:padding="8dp"-->
             <!--android:fadingEdge="vertical"-->
-            <!--android:fadingEdgeLength="100dp"-->
             <!--android:layout_width="match_parent"-->
             <!--android:layout_height="match_parent">-->
             <TextView
@@ -29,17 +28,18 @@
 
         <!--</ScrollView>-->
 
-
-
     </android.support.v7.widget.CardView>
+
 
     <TextView
         android:id="@+id/revealing_view"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:layout_gravity="center"
+        android:textSize="18sp"
         android:background="@drawable/red_round"
         android:drawablePadding="16dp"
+        android:elevation="4dp"
         android:gravity="center"
         android:text="Delete"
         android:textColor="@color/white" />
