--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.CardView
+    <ru.yandex.yamblz.ui.views.InterceptCardView
         android:id="@+id/dismissable_view"
         android:layout_margin="25dp"
         android:layout_width="match_parent"
@@ -14,21 +14,21 @@
         app:cardUseCompatPadding="true"
         app:contentPadding="12dp"
         app:cardCornerRadius="20dp"
-        app:cardElevation="10dp">
+        app:cardElevation="8dp">
 
-        <!--<ScrollView-->
-            <!--android:padding="8dp"-->
-            <!--android:fadingEdge="vertical"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent">-->
+        <ScrollView
+            android:padding="8dp"
+            android:fadingEdge="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/placeholder" />
 
-        <!--</ScrollView>-->
+        </ScrollView>
 
-    </android.support.v7.widget.CardView>
+    </ru.yandex.yamblz.ui.views.InterceptCardView>
 
 
     <TextView
@@ -39,7 +39,6 @@
         android:textSize="18sp"
         android:background="@drawable/red_round"
         android:drawablePadding="16dp"
-        android:elevation="4dp"
         android:gravity="center"
         android:text="Delete"
         android:textColor="@color/white" />
