--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -3,12 +3,9 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/content"
-        android:textSize="42sp"
-        android:gravity="center"
-        />
+   <ru.yandex.yamblz.ui.views.SwipeToDeleteView
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:layout_gravity="center"/>
 
 </FrameLayout>
